Edit ignores (both git and npm).

--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,24 @@
+.idea
+.c9revisions
+.DS_Store
+
+node_modules
+npm-debug.log
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.tgz
+
+pids
+logs
+results
+
 src
 test
-node_modules
 *.coffee
