--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
         "prepublish": "grunt publish"
     },
     "dependencies":    {
-        "xml2js":  "~0.2.3",
-        "lodash":  "~1.0.0",
-        "request": "~2.12.0",
-        "eyes":    "~0.1.8"
+        "xml2js":      "~0.2.3",
+        "lodash":      "~1.0.0",
+        "request":     "~2.12.0",
+        "eyes":        "~0.1.8",
+        "deep-freeze": "~0.0.1"
     },
     "devDependencies": {
         "mocha":               "~1.8.0",
