--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "grunt":               "~0.3.17",
         "grunt-bg-shell":      "~1.0.2",
         "grunt-coffee":        "~0.0.6",
-        "grunt-coffeelint":    "~0.0.4",
+        "grunt-coffeelint":    "0.0.4",
         "grunt-mocha-test":    "~0.1.1",
         "grunt-contrib-clean": "~0.3.1",
         "chai":                "~1.4.2",
