--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "prepublish": "grunt publish"
     },
     "dependencies":    {
-        "xml2js":      "git://github.com/Leonidas-from-XIV/node-xml2js.git",
+        "xml2js":      "git://github.com/Sitin/node-xml2js.git",
         "lodash":      "~1.0.0",
         "request":     "~2.12.0",
         "eyes":        "~0.1.8",
