--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "lodash":      "~1.0.0",
         "request":     "~2.12.0",
         "eyes":        "~0.1.8",
-        "deep-freeze": "~0.0.1"
+        "deep-freeze": "~0.0.1",
+        "coffee-mix":  "~0.0.1"
     },
     "devDependencies": {
         "mocha":               "~1.8.0",
