--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
         "coffee-mix":  "~0.0.2"
     },
     "devDependencies": {
-        "mocha":               "~1.8.0",
-        "codo":                "~1.5.6",
-        "grunt":               "~0.3.17",
-        "grunt-bg-shell":      "~1.0.2",
-        "grunt-coffee":        "~0.0.6",
-        "grunt-coffeelint":    "0.0.4",
-        "grunt-mocha-test":    "~0.1.1",
-        "grunt-contrib-clean": "~0.3.1",
-        "chai":                "~1.4.2",
-        "chai-spies":          "~0.5.1"
+        "mocha":                "~1.8.0",
+        "codo":                 "~1.5.6",
+        "grunt":                "~0.4.0",
+        "grunt-bg-shell":       "~2.0.1",
+        "grunt-contrib-coffee": "~0.5.0",
+        "grunt-coffeelint":     "~0.0.6",
+        "grunt-mocha-test":     "~0.2.0",
+        "grunt-contrib-clean":  "~0.4.0",
+        "chai":                 "~1.4.2",
+        "chai-spies":           "~0.5.1"
     },
     "readmeFilename":  "README.md",
     "main":            "index.js",
