--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "grunt-coffeelint":     "~0.0.6",
         "grunt-mocha-test":     "~0.2.0",
         "grunt-contrib-clean":  "~0.4.0",
+        "grunt-contrib-watch":  "~0.3.1",
+        "grunt-notify":         "~0.1.4",
         "chai":                 "~1.4.2",
         "chai-spies":           "~0.5.1"
     },
