--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "eyes":        "~0.1.8",
         "deep-freeze": "~0.0.1",
         "coffee-mix":  "~0.0.7",
-        "fibers":      "~1.0.0"
+        "fibers":      "~1.0.0",
+        "libxmljs":    "~0.7.1"
     },
     "devDependencies": {
         "mocha":                "~1.8.0",
